# HospitalManagementSystem

./: .env.example  .gitattributes  .gitignore  BILLING_LOGIC_IMPROVEMENTS.md  BILLING_QUICK_START.md  LICENSE  README.md  fix_trigger.py  pyproject.toml  recalculate_bills.py  test.db
backend/: .env  config.py  database.py  exceptions.py  logging_config.py  main.py  middleware.py  models.py  repositories.py  schemas.py  utils.py
backend/routers/: __init__.py  appointments.py  billing.py  doctors.py  medical_records.py  medicines.py  patients.py  rooms.py
backend/scripts/: __init__.py  fix_trigger.py  recalculate_bills.py
backend/services/: __init__.py  appointment_service.py  billing_service.py  doctor_service.py  medical_records_service.py  medicines_service.py  patient_service.py  rooms_service.py
database/: schema.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/appointments/: page.tsx
frontend/app/billing/: page.tsx
frontend/app/doctors/: page.tsx
frontend/app/medical-records/: page.tsx
frontend/app/medicines/: page.tsx
frontend/app/patients/: page.tsx
frontend/components/: ErrorBoundary.tsx
frontend/hooks/: index.ts  useAsync.ts  useData.ts  useValidation.ts
frontend/lib/: api.ts  utils.ts
frontend/types/: index.ts
test/: test_appointments.py  test_billing.py  test_medical_records.py  test_medicines.py  test_rooms.py
tests/: conftest.py  test_appointments.py  test_billing.py  test_doctors.py  test_patients.py  test_rooms.py
(+14 files in other folders)
