[project]
name = "hospital-management-system"
version = "1.0.0"
description = "A comprehensive Hospital Management System API with separation of concerns and industry best practices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
